[package]
name = "macro_kako_tools"
version = "0.1.0"
authors = ["kakoeimon <kakoeimon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "0.2.9"
macroquad = {git = "https://github.com/not-fl3/macroquad", branch = "master"}
#macroquad = {path = "../../macroquad"}
#hecs = "0.2.14"
hecs = {git = "https://github.com/Ralith/hecs"}
quad-snd = {git = "https://github.com/not-fl3/quad-snd"}
noise = "0.6"
gilrs = "0.7.4"