[package]
name = "macro_kako_tools"
version = "0.1.0"
authors = ["kakoeimon <kakoeimon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "0.2.9"
macroquad = {git = "https://github.com/not-fl3/macroquad", branch = "master"}
#macroquad = {path = "../../macroquad"}
#macroquad = {git = "https://github.com/not-fl3/macroquad", branch = "0.3"}
hecs = "0.3"
#hecs = {git = "https://github.com/Ralith/hecs"}
quad-snd = {git = "https://github.com/not-fl3/quad-snd"}
#quad-snd = {git = "https://github.com/not-fl3/quad-snd", rev = "b1eef89871c91039e6230a80f8d30a1cd4f96a36"}
noise = "0.6"
csv = "1.1"
#gilrs = "0.7.4"